--- a/src/components/Sort/sort.scss
+++ b/src/components/Sort/sort.scss
@@ -1,7 +1,7 @@
 @import '../../scss/config';
 
 .sort{
-    display: flex;
+    //display: flex;
     justify-content: row;
     background: #E5E5E5;
     @media (max-width: $sm) {
@@ -54,6 +54,62 @@
         margin: 0px 0px 10px 20px;
     }
 }
-.nice{
+
+
+
+
+
+.transform{
+    transform: rotate(180deg);
+    }
+    .sort {
+    //   position: relative;
+      &__label {
+        display: block;
+        // align-items: center;
     
-}
+        svg {
+          margin-right: 8px;
+        }
+    
+        b {
+          margin-right: 8px;
+        }
+    
+        span {
+          color: blue($color: #000000);
+          border-bottom: 1px dashed;
+          cursor: pointer;
+        }
+      }
+    
+      &__popup {
+        position: relative;
+        // right: 0;
+        // margin-top: 15px;
+        background: #ffffff;
+        box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.09);
+        border-radius: 10px;
+        overflow: hidden;
+        // padding: 10px 0;
+        width: 150px;
+    
+        ul {
+          overflow: hidden;
+          li {
+            padding: 12px 20px;
+            cursor: pointer;
+    
+            &.active,
+            &:hover {
+              background: rgba(254, 95, 30, 0.05);
+            }
+    
+            &.active {
+              font-weight: bold;
+            }
+          }
+        }
+      }
+    }
+    
