--- a/src/components/CartBlock/CartItem/cartItem.module.scss
+++ b/src/components/CartBlock/CartItem/cartItem.module.scss
@@ -1,11 +1,22 @@
 .wrapper{
 
-margin: 0 auto;
+    margin: 0 auto;
+    max-width: 1200px;
 
 }
-
+.background{
+    position: relative;
+}
 .img{
-    max-width: 450px;
+    position: relative;
+    max-width: 250px;
+}
+
+.like {
+    position: absolute;
+    color: red;
+    top: 0px;
+    left: 200px;
 }
 
 .remove{
