--- a/src/components/BurgerMenu/burgerMenu.scss
+++ b/src/components/BurgerMenu/burgerMenu.scss
@@ -1,7 +1,12 @@
+@import '../../scss/config';
+
 #page-wrap {
-  text-align: center;
-  overflow: auto;
+
+  // text-align: center;
+  // overflow: auto;
   //top: 45%;
+  width: 100%;
+  height: 100%;
   position: relative;
 }
 
@@ -19,8 +24,8 @@
 
 .bm-burger-button {
   // Кнопка
-  position: fixed;
-  @media (max-width: 700px) {
+  position: absolute;
+  @media (max-width: $lg) {
 
     width: 36px;
     height: 30px;
@@ -35,6 +40,9 @@
 }
 
 .bm-cross-button {
+  // position: absolute;
+  
+  right: 100px;
   height: 24px;
   width: 24px;
 }
@@ -47,9 +55,13 @@
 /* General sidebar styles */
 .bm-menu {
   //всплывающее меню
+  margin-top:-44px;
+  width: 1000px;
+  min-height: 100%;
   background: #000;
   padding: 20px 20px;
   font-size: 20px;
+  // z-index: 10;
 }
 
 /* Morph shape necessary with bubble or elastic */
@@ -63,6 +75,7 @@
 }
 
 /* Styling of overlay */
-.bm-overlay {
-  background: rgba(255, 255, 255, 0.3);
-}
+
+// .bm-overlay {
+//   background: rgba(255, 255, 255, 0.3);
+// }
