--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -11,15 +11,15 @@
   flex-direction: column;*/
 }
 
-.header:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-}
+// .header:before {
+//   content: '';
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   z-index: 2;
+// }
 
 .header__background {
   background: url(../../assets/img/fon1.jpg);
@@ -53,7 +53,7 @@
 
 .header__logo {
   z-index: 3;
-  margin: 40px 110px 0px 120px;
+  margin: 40px 0px 0px 120px;
   position: absolute; /* Фиксированное положение */
   left: 0px;
 
@@ -62,7 +62,7 @@
     margin-top: 40px;
   }
 
-  @media (max-width: $md) {
+  @media (max-width: $lg) {
     margin-top: 0px;
     //display: none;
   }
@@ -80,9 +80,9 @@
   margin-left: 100px;
   
 
-  @media (max-width: $xl) {
-    //margin-right: 200px;
-  }
+  // @media (max-width: $xl) {
+  //   //margin-right: 200px;
+  // }
 }
 
 .header__nav-list {
@@ -213,46 +213,47 @@
 }
 
 @media (max-width: $lg) {
-  .header {
-    width: 100%;
-    position: absolute;
-  }
+  // .header {
+  //   width: 100%;
+  //   position: absolute;
+  // }
 
   .header__nav {
-    position: fixed;
-    overflow: auto;
-    top: -100%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    z-index: 1;
-    padding-top: 60px;
-    transition: all 0.3s ease 0s;
+    display: none;
+    // position: fixed;
+    // overflow: auto;
+    // top: -100%;
+    // left: 0;
+    // width: 100%;
+    // height: 100%;
+    // background-color: black;
+    // z-index: 0;
+    // padding-top: 60px;
+  //   // transition: all 0.3s ease 0s;
 
-    &.active {
-      top: 0;
-    }
+  //   &.active {
+  //     top: 0;
+  //   }
+  // }
+
+  // html.lock,
+  // body.lock {
+  //   overflow: hidden;
+  // }
+
+  // //Tempesto20
+
+  // .header__nav-link {
+  //   padding: 0px;
+
+  //   &:hover {
+  //     border-top: none;
+  //   }
+  // }
+
+  // .header__nav-list {
+  //   display: block;
+  // }
+
   }
-
-  html.lock,
-  body.lock {
-    overflow: hidden;
-  }
-
-  //Tempesto20
-
-  .header__nav-link {
-    padding: 0px;
-
-    &:hover {
-      border-top: none;
-    }
-  }
-
-  .header__nav-list {
-    display: block;
-  }
-
-
 }
