--- a/src/components/BurgerMenu/burgerMenu.scss
+++ b/src/components/BurgerMenu/burgerMenu.scss
@@ -1,12 +1,6 @@
 @import '../../scss/config';
 
 #page-wrap {
-
-  // text-align: center;
-  // overflow: auto;
-  //top: 45%;
-  width: 100%;
-  height: 100%;
   position: relative;
 }
 
@@ -42,7 +36,7 @@
 .bm-cross-button {
   // position: absolute;
   
-  right: 100px;
+  // right: 100px;
   height: 24px;
   width: 24px;
 }
@@ -55,8 +49,9 @@
 /* General sidebar styles */
 .bm-menu {
   //всплывающее меню
-  margin-top:-44px;
-  width: 1000px;
+  // margin-top:-44px;
+  // width: 1000px;
+  width: 100%;
   min-height: 100%;
   background: #000;
   padding: 20px 20px;
