--- a/src/components/CatsBlock/catBlock.scss
+++ b/src/components/CatsBlock/catBlock.scss
@@ -33,12 +33,15 @@
     height: 253px;
     margin-bottom: 0px;
     @media (max-width: $xl) {
+        height: 100%;
         width: 300px;
     }
     @media (max-width: $lg) {
+        height: 100%;
         width: 380px;
     }
     @media (max-width: $sm) {
+        height: 100%;
         width: 250px;
     }
 
