--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,10 +1,10 @@
 @import '../../scss/config';
 
 .header {
-  padding: 0px 0px;
-  margin: 0px 0px;
+  // padding: 0px 0px;
+  // margin: 0px 0px;
   position: relative;
-  z-index: 50;
+  // z-index: 50;
 /*
   min-height: 100%;
   display: flex;
@@ -48,59 +48,50 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  @media (max-width: $sm) {
+    display: block;
+  }
 }
 
 
 .header__logo {
-  z-index: 3;
+  z-index: 1;
   margin: 40px 0px 0px 120px;
-  position: absolute; /* Фиксированное положение */
-  left: 0px;
+  position: relative; /* Фиксированное положение */
+  // left: 0px;
 
   @media (max-width: $xl) {
-    //margin: 40px 30px 0px 0px;
     margin-top: 40px;
   }
-
-  @media (max-width: $lg) {
-    margin-top: 0px;
-    //display: none;
+  @media (max-width: $md) {
+    margin: 0px 0px 0px 40px;
   }
   @media (max-width: $sm) {
     margin-top: 0px;
-    margin-left: 30px;
+    margin-left: 40px;
   }
 }
 
 .header__logo-1 {}
 
 .header__nav {
-  z-index: 3;
-  //margin: auto;
-  margin-left: 100px;
-  
 
-  // @media (max-width: $xl) {
-  //   //margin-right: 200px;
-  // }
 }
 
 .header__nav-list {
+  margin: 0 auto;
   display: flex;
   list-style: none;
 }
 
 .header__nav-item {
   position: relative;
-  margin: 56px 0px 0px 100px;
+  padding: 56px 0px 0px 116px;
 
   @media (max-width: $xl) {
-    margin: 56px 10px 0px 20px;
+    padding: 56px 10px 0px 20px;
   }
 
-  @media (max-width: $lg) {
-    margin: 60px 0px 5px 116px;
-  }
 }
 
 .header__nav-link {
@@ -121,14 +112,18 @@
 }
 
 .header__number-container {
-  z-index: 3;
+  z-index: 1;
+  margin-top: 100px;
   @media (max-width: $lg) {
-    margin-top: 100px;
+    // margin-top: 100px;
   }
   @media (max-width: $md) {
     display: flex;
     flex-direction: column-reverse;
-    margin-top: 140px;
+    margin-top: 80px;
+  } 
+  @media (max-width: $sm) {
+    margin-top: 0px;
   } 
 }
 
@@ -140,18 +135,19 @@
   white-space: nowrap;
   margin: 46px 0px 4px 0px;
   position: absolute; /* Фиксированное положение */
-  right: 80px;
+  right: 20px;
   @media (max-width: $md) {
     position:relative;  
     font-weight: normal;
     font-size: 18px;
     line-height: 22px;
-    margin: 10px 0px 10px 30px;
+    margin: 10px 0px 0px 0px;
   }  
   @media (max-width: $sm) {
-    position:absolute;
-    top: 120px;
-    left: 0px;
+    right: auto;
+    margin-top: 0px;
+    padding-top: 0px;
+    padding-left: 30px;
    }
 
   //Tempesto20
@@ -164,7 +160,7 @@
   color: #FFFFFF;
   white-space: nowrap;
   position: absolute; /* Фиксированное положение */
-  right: 80px;
+  right: 20px;
   margin: 0px;
 
   @media (max-width: $md) {
@@ -172,12 +168,13 @@
     font-weight: bold;
     font-size: 24px;
     line-height: 29px;
-    margin: 40px 0px 10px 30px;
+    margin: 0px 0px 0px 0px;
   }
   @media (max-width: $sm) {
-    position:absolute;
-    //top: 170px;
-    left: 0px;
+    right: auto;
+    margin-top: 0px;
+    padding-top: 0px;
+    padding-left: 30px;
    }
   
 
@@ -198,7 +195,6 @@
   white-space: nowrap;
   margin: 50px 0px 66px 120px;
   
-
   @media (max-width: $xl) {
     font-size: 26px;
     line-height: 32px;
@@ -213,47 +209,7 @@
 }
 
 @media (max-width: $lg) {
-  // .header {
-  //   width: 100%;
-  //   position: absolute;
-  // }
-
   .header__nav {
     display: none;
-    // position: fixed;
-    // overflow: auto;
-    // top: -100%;
-    // left: 0;
-    // width: 100%;
-    // height: 100%;
-    // background-color: black;
-    // z-index: 0;
-    // padding-top: 60px;
-  //   // transition: all 0.3s ease 0s;
-
-  //   &.active {
-  //     top: 0;
-  //   }
-  // }
-
-  // html.lock,
-  // body.lock {
-  //   overflow: hidden;
-  // }
-
-  // //Tempesto20
-
-  // .header__nav-link {
-  //   padding: 0px;
-
-  //   &:hover {
-  //     border-top: none;
-  //   }
-  // }
-
-  // .header__nav-list {
-  //   display: block;
-  // }
-
   }
 }
