--- a/src/Page/FavoriteCats/favoriteCats.module.scss
+++ b/src/Page/FavoriteCats/favoriteCats.module.scss
@@ -1,4 +1,15 @@
 .wrapper{
     // background-color: red;
-    padding-top: 300px;
+    // padding-top: 300px;
+}
+.trashСan{
+    cursor: pointer;
+    width: 30px;
+}
+.deleteSpan{
+    cursor: pointer;
+}
+.back{
+    cursor: pointer;
+    width: 20px;
 }
