--- a/src/Page/Cart/cart.module.scss
+++ b/src/Page/Cart/cart.module.scss
@@ -1,8 +1,20 @@
 //import styles from './cart.module.scss'
 
 .container{
-    padding-top: 340px;
+    // padding-top: 340px;
     //background-color: red;
     margin: 0 auto;
     padding-left: 100px;
+}
+.trashСan{
+    cursor: pointer;
+    width: 30px;
+}
+.deleteSpan{
+    cursor: pointer;
+}
+
+.back{
+    cursor: pointer;
+    width: 20px;
 }
