--- a/src/components/Header/Main/main.module.scss
+++ b/src/components/Header/Main/main.module.scss
@@ -1,3 +1,23 @@
 .wrapper{
-    padding-top: 400px;
+    // padding-top: 0px;
+    width: 1280px;
+    margin: 0 auto;
+}
+.preview{
+    margin: 0 auto;
+    text-align: center;
+    font-weight: bold;
+}
+.header{
+    display: flex;
+}
+.middle{
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.bottom{
+    margin: 0 auto;
+    text-align: center;
+    font-weight: bold;
 }
