--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,25 +1,10 @@
 @import '../../scss/config';
 
 .header {
-  // padding: 0px 0px;
-  // margin: 0px 0px;
   position: relative;
-  // z-index: 50;
-/*
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;*/
 }
 
-// .header:before {
-//   content: '';
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-//   z-index: 2;
-// }
+
 
 .header__background {
   background: url(../../assets/img/fon1.jpg);
@@ -40,7 +25,7 @@
 }
 
 .header_max{
-  max-width: 1280px;
+  width: 1280px;
 
 }
 
