--- a/src/components/Header/Gallery/gallery.module.scss
+++ b/src/components/Header/Gallery/gallery.module.scss
@@ -1,4 +1,83 @@
-.wrapper{
-    max-width: 1280px;
-    padding-top: 0px;
+@import '../../../scss/config';
+
+.background {
+  background: #e5e5e5;
 }
+
+.wrapper{
+  position: relative;
+    max-width: 1280px;
+    margin: 0 auto;
+}
+
+.header{
+    margin: 0 auto;
+    // text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.introduction{
+  text-align: center;
+  font-size: 22px;
+  padding-top: 30px;
+}
+
+
+.clarification{
+  text-align: center;
+  font-weight: normal;
+  font-size: 18px;
+  padding: 20px 20px;
+}
+
+.container {
+  position: relative;
+  padding: 40px;
+  // background: #419be0;
+  margin: 0 auto;
+  // .slick-prev{
+  //   color:red;
+  //   background-color: red;
+  // }
+  button.slick-arrow.slick-prev{
+
+    .slick-prev {
+      left:   25px;
+  }
+
+  }
+  button{}
+  .slick-slider.slick-initialized{
+  }
+}
+
+
+.bottom{
+  margin: 0 auto;
+  text-align: center;
+  padding: 30px 20px;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+
+
+// .arrow {
+//   position: absolute;
+//   color: #000000;
+//   font-size: 2.5em;
+//   font-weight: bold;
+
+//   cursor: pointer;
+// }
+
+// .nextArrow {
+//   top: 0;
+//   right: -45px;
+// }
+
+// .prevArrow {
+//   top: 0;
+//   left: -45px;
+// }
