--- a/src/components/FavoriteBlock/FavoriteEmpty/favoriteEmpty.module.scss
+++ b/src/components/FavoriteBlock/FavoriteEmpty/favoriteEmpty.module.scss
@@ -1,10 +1,86 @@
+@import '../../../scss/config';
+
+
+.background{
+    background: #e5e5e5;
+}
+
+.wrapper{
+    max-width: 1280px;
+    margin: 0 auto;
+}
 .container{
-    // margin-top: 370px;
-    padding-top: 380px;
     margin: 0 auto;
     text-align: center;
+    padding: 100px 100px;
+    @media (max-width: $md) {
+        padding-left: 20px;
+        padding-right: 20px;
+      }
+      @media (max-width: $ssm) {
+        padding-right: 0px;
+      }
+}
+.preview{
+    
+    font-weight: bold;
+    font-size: 22px;
+}
+.header{
+padding-top: 40px;
+}
+.title{
+    font-size: 20px;
+}
+.subtitle{
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 10px;
+    padding-bottom: 30px;
 }
 
 .cartEmpty{
-    width: 400px;
+    max-width: 800px;
+    height: 100%;
+    @media (max-width: $lg) {
+        max-width: 600px;
+      }
+      @media (max-width: $md) {
+        max-width: 460px;
+      }
+      @media (max-width: $sm) {
+        max-width: 360px;
+      }
+      @media (max-width: $sm) {
+        max-width: 260px;
+      }
 }
+.buttonHome {
+    margin: 0 auto;
+    display: flex;
+    border: 1px solid #000000;
+    border-radius: 50px;
+    box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
+    padding: 10px;
+    background-color: rgb(180, 196, 196);
+    max-width: 260px;
+    cursor: pointer;
+    margin-top: 60px;
+    @media (max-width: $lg) {
+      margin-top: 20px;
+      margin-left: 20px;
+    }
+    @media (max-width: $ssm) {
+        margin-left: 0px;
+      }
+  }
+  
+  .home {
+    max-width: 40px;
+    height: 100%;
+  }
+  .backHome {
+    text-align: center;
+    padding-top: 20px;
+    padding-left: 10px;
+  }
