--- a/src/Page/Cart/cart.module.scss
+++ b/src/Page/Cart/cart.module.scss
@@ -47,6 +47,9 @@
   padding-top: 40px;
   padding-bottom: 40px;
   padding-left: 20px;
+  @media (max-width: $ssm) {
+    padding-left: 0px;
+  }
 }
 
 .count {
@@ -99,6 +102,9 @@
     margin-top: 20px;
     margin-left: 20px;
   }
+  @media (max-width: $ssm) {
+    margin-left: 0px;
+  }
 }
 
 .home {
@@ -127,6 +133,9 @@
   @media (max-width: $lg) {
     margin-top: 20px;
     margin-left: 20px;
+  }
+  @media (max-width: $ssm) {
+    margin-left: 0px;
   }
 }
 .cart {
