--- a/src/Page/Home/home.module.scss
+++ b/src/Page/Home/home.module.scss
@@ -13,7 +13,10 @@
 .container{
     display: flex;
     padding-top: 40px ;
-    padding-bottom: 100px;
+    padding-bottom: 140px;
+    @media (max-width: $sm) {
+        padding-bottom: 200px;
+      }
 }
 
 
