--- a/src/components/Sort/sort.scss
+++ b/src/components/Sort/sort.scss
@@ -5,7 +5,7 @@
     left: 300px;
     z-index: 2;
     @media (max-width: $xl) {
-      padding-top: 90px;
+      margin-top: 90px;
     }
     @media (max-width: $sm) {
       left: 20px;
