шлефану управляющее меню в fullcat, favoritecat, cart

--- a/src/Page/FavoriteCats/favoriteCats.module.scss
+++ b/src/Page/FavoriteCats/favoriteCats.module.scss
@@ -80,6 +80,7 @@
 
 .buttonBottom {
   display: flex;
+  justify-content: space-between;
   margin: 0 auto;
   padding-top: 40px;
   padding-bottom: 80px;
@@ -89,61 +90,100 @@
   }
 }
 
-.buttonHome {
+
+.buttonTitle{
   display: flex;
   border: 1px solid #000000;
   border-radius: 50px;
-  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
   padding: 10px;
   background-color: rgb(180, 196, 196);
   max-width: 260px;
-  cursor: pointer;
   @media (max-width: $lg) {
-    margin-top: 20px;
-    margin-left: 20px;
-  }
-  @media (max-width: $ssm) {
-    margin-left: 0px;
-  }
+      margin-top: 20px;
+      margin-left: 20px;
+    }
+    @media (max-width: $ssm) {
+      margin-left: 0px;
+    }
 }
 
-.home {
+.imgBottom{
   max-width: 40px;
-  height: 100%;
 }
-.backHome {
+
+.buttonSubtitle{
   text-align: center;
   padding-top: 20px;
   padding-left: 10px;
 }
 
-.buttonCart {
-  display: flex;
-  margin-left: 200px;
-  border: 1px solid #000000;
-  border-radius: 50px;
-  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
-  padding: 10px;
-  background-color: rgb(180, 196, 196);
-  max-width: 260px;
-  cursor: pointer;
-  @media (max-width: $xl) {
-    margin-left: 100px;
-  }
-  @media (max-width: $lg) {
-    margin-top: 20px;
-    margin-left: 20px;
-  }
-  @media (max-width: $ssm) {
-    margin-left: 0px;
-  }
-}
-.cart {
-  max-width: 40px;
-  height: 100%;
-  //   padding-left: 40px;
-}
-.backCart {
-  padding-top: 20px;
-  padding-left: 10px;
-}
+
+
+
+
+
+
+
+
+
+
+
+// .buttonHome {
+//   display: flex;
+//   border: 1px solid #000000;
+//   border-radius: 50px;
+//   box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
+//   padding: 10px;
+//   background-color: rgb(180, 196, 196);
+//   max-width: 260px;
+//   cursor: pointer;
+//   @media (max-width: $lg) {
+//     margin-top: 20px;
+//     margin-left: 20px;
+//   }
+//   @media (max-width: $ssm) {
+//     margin-left: 0px;
+//   }
+// }
+
+// .home {
+//   max-width: 40px;
+//   height: 100%;
+// }
+// .backHome {
+//   text-align: center;
+//   padding-top: 20px;
+//   padding-left: 10px;
+// }
+
+// .buttonCart {
+//   display: flex;
+//   margin-left: 200px;
+//   border: 1px solid #000000;
+//   border-radius: 50px;
+//   box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, 0.2);
+//   padding: 10px;
+//   background-color: rgb(180, 196, 196);
+//   max-width: 260px;
+//   cursor: pointer;
+//   @media (max-width: $xl) {
+//     margin-left: 100px;
+//   }
+//   @media (max-width: $lg) {
+//     margin-top: 20px;
+//     margin-left: 20px;
+//   }
+//   @media (max-width: $ssm) {
+//     margin-left: 0px;
+//   }
+// }
+// .cart {
+//   max-width: 40px;
+//   height: 100%;
+//   //   padding-left: 40px;
+// }
+// .backCart {
+//   padding-top: 20px;
+//   padding-left: 10px;
+// }
